--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -15,12 +15,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
   
 
-  <link rel="icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png">
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png">
+  <link rel="icon" type="image/png" href="/media/icon_hu04041fa2424d3f847c76b598ce521e02_94882_32x32_fill_lanczos_center_3.png">
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu04041fa2424d3f847c76b598ce521e02_94882_192x192_fill_lanczos_center_3.png">
 
   <link rel="canonical" href="https://linzhuyue.github.io/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Linzhu Yue</title>
 
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/theme/black.min.css">
