1,update the CV

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
     <div class="article-style">
       <p>A PhD with a passion for legged robots, focusing on how to use optimal control and RL-based control to make legged robots more agile, such as jumping, parkour, plummeting, and adapting to uneven terrains.
 
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/demo_resume.pdf" target="_blank">CV</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/LinZhuYue.pdf" target="_blank">Simple CV</a>.</p>
 
     </div>
 
