--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
       </div>
       <ul class="network-icon" aria-hidden="true">
         <li>
-          <a href="mailto:lzyue@mae.cuhk.edu.hk"  aria-label="envelope">
+          <a href="mailto:kirinmin@hotmail.com"  aria-label="envelope">
             <i class="fas fa-envelope big-icon"></i>
           </a>
         </li>
         <li>
-          <a href="https://scholar.google.com/citations?user=7mJEEhkAAAAJ&amp;hl=zh-CN" target="_blank" rel="noopener" aria-label="graduation-cap">
+          <a href="https://scholar.google.com/citations?hl=zh-CN&user=gcoI1hsAAAAJ" target="_blank" rel="noopener" aria-label="graduation-cap">
             <i class="fas fa-graduation-cap big-icon"></i>
           </a>
         </li>
@@ -168,17 +168,17 @@
           </a>
         </li>
         <li>
-          <a href="https://www.zhihu.com/people/yuexiaozhu" target="_blank" rel="noopener" aria-label="zhihu">
+          <a href="https://www.zhihu.com/people/kirinmin" target="_blank" rel="noopener" aria-label="zhihu">
             <i class="fab fa-zhihu big-icon"></i>
           </a>
         </li>
         <li>
-          <a href="https://space.bilibili.com/349005938" target="_blank" rel="noopener" aria-label="bilibili">
+          <a href="https://space.bilibili.com/86201899" target="_blank" rel="noopener" aria-label="bilibili">
             <i class="fab fa-bilibili big-icon"></i>
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/channel/UCCInBxO2CE1GrlkDKepGNEA" target="_blank" rel="noopener" aria-label="youtube">
+          <a href="https://www.youtube.com/channel/UCt1bX4QQtIaKzM6ULo0CT9g" target="_blank" rel="noopener" aria-label="youtube">
             <i class="fab fa-youtube big-icon"></i>
           </a>
         </li>
