--- a/index.html
+++ b/index.html
@@ -305,22 +305,21 @@
               <a href="/publication/genloco_hb/">
                 <div class="img-hover-zoom">
                   <img
-                    src="/publication/genloco_hb/featured_huf539211ba24ffd71b4842c360b105389_4158101_808x455_fill_q75_h2_lanczos_smart1_3.webp"
+                    src="/publication/genloco_hb/featured.png"
                     height="455" width="808" class="article-banner"
-                    alt="GenLoco: Generalized Locomotion Controllers for Quadrupedal Robots" loading="lazy">
+                    alt="Blockchain technology research and application a systematic literature review and future trends" loading="lazy">
                 </div>
               </a>
               <div class="section-subheading article-title mb-1 mt-3">
-                <a href="/publication/genloco_hb/">GenLoco: Generalized Locomotion Controllers for Quadrupedal
-                  Robots</a>
+                <a href="/publication/genloco_hb/">Blockchain technology research and application a systematic literature review and future trends</a>
               </div>
               <a href="/publication/genloco_hb/" class="summary-link">
                 <div class="article-style">
-                  <p>A framework for training generalized locomotion (GenLoco) controllers for quadrupedal robots.</p>
+                  <p>An overview of blockchain technology research, application and development trends.</p>
                 </div>
               </a>
               <div class="btn-links">
-                <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2209.05309"
+                <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2306.14802"
                   target="_blank" rel="noopener">
                   PDF
                 </a>
